added contact form frontend and integrated with supabase backend

--- a/thoughts/git.mdx
+++ b/thoughts/git.mdx
@@ -138,4 +138,4 @@ git merge origin/main
 ```
 
 <h1>Conclusion</h1>
-<p>There’s still a lot to learn about Git, but that’s it for now! I hope that this article deepened your understanding of Git in one way or another. If you found any mistakes along the way, feel free to let me know <a href="/">here</a>. Happy learning!</p>
+<p>There’s still a lot to learn about Git, but that’s it for now! I hope that this article deepened your understanding of Git in one way or another. If you found any mistakes along the way, feel free to let me know at the bottom of <a href="/">this page</a>. Happy learning!</p>
