fixed minor errors

--- a/thoughts/pain.mdx
+++ b/thoughts/pain.mdx
@@ -15,6 +15,6 @@ One of my favourite saying was “When all else fails, time heals everything”.
 
 Recently, I started to question, what if time doesn’t heal? The answer I got from a wise guy has became my new favourite saying - not one I currently believe in, but one that got me pondering deeper. 
 
-<blockquote>“If time doesn’t heal, time will help forget.” -wise guy</blockquote>
+<blockquote>“If time doesn’t heal, time will help forget.”</blockquote>
 
 The current question is, what if time is a hundred years?
