--- a/thoughts/git.mdx
+++ b/thoughts/git.mdx
@@ -12,7 +12,7 @@ id: 4
 <p>Git is a powerful version control system and one of the most widely used ones today. It is useful for keeping track of code changes and collaborating with other team members. Git can be used with other Git hosting services such as GitHub, GitLab, BitBucket. But in this article, we will be focusing on using Git with GitHub. Git and GitHub may sound similar, but they are not to be confused! Unlike git which is a command-line tool, GitHub is a graphical user interface and a Git repository hosting service.</p>
 
 <h1>1. Install git</h1> 
-<p>If you do not have git installed, you can visit <a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a> for instructions.</p>
+<p>If you do not have git installed, you can visit <a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a> for instructions to install.</p>
 <h1>2. Setting up</h1>
 
 ```
@@ -115,7 +115,7 @@ git branch -d new-branch-name
 git push origin new-branch-name
 ```
 
-<p>When your new branch is ready to be merged with the main branch, create a pull request (PR), by clicking on “Compare & Pull Request” button on GitHub. In a pull request, you will describe the changes and request your team members to review your code before putting the changes on the main branch. When your new branch is ready to be merged, click on the green “merge pull request” button. Afterwards, click the “Delete branch” button to delete your new branch, as it is no longer needed.</p>
+<p>When your new branch is ready to be merged with the main branch, create a pull request (PR), by clicking on “Compare & Pull Request” button on GitHub. In a pull request, you will describe the changes, and request your team members to review your code before putting the changes on the main branch. When your new branch has been approved / is ready to be merged, click on the green “merge pull request” button. Afterwards, click the “Delete branch” button to delete your new branch, as it is no longer needed.</p>
 
 <h1>10. Collaborating</h1>
 <p>When collaborating, you and your team members will usually make changes to the same file. To ensure that you’re working on the most updated git repository, run:</p>
