--- a/thoughts/time.mdx
+++ b/thoughts/time.mdx
@@ -13,6 +13,6 @@ Healing is learning to accept the facts, learning to let go, and stop holding on
 
 But when we finally healed, the wounds, they leave scars - not the painful ones, but a beautiful battle scar of how much we’ve grown and overcome.
 
-But will we really forget? If time doesn’t heal, will time really help to forget? 
+But will we really forget? If time doesn’t heal, will time really help to forget? I do not think so. The memories will be etched into my mind as permanently as the scar that lingers.
 
-My dear friend, time passed, but I always remember. It doesn’t matter if I have a memory of an array of size one, because I only need one.
+My dear friend, time passed, but I always remember. It doesn’t matter if I have a memory of an array of length one, because I only need one.
