Update metadata and articles

--- a/thoughts/sky.mdx
+++ b/thoughts/sky.mdx
@@ -7,7 +7,7 @@ id: 1
 ---
 Building my personal website was initially just a seed in my garden of thoughts. But then I met the sky, who shared with me everything, rain or shine. 
 
-Connected via an invisible string, the sky was always there whenever I went. With the sun to brighten up my day and the moon to guide me through the dark. Day by day, the seed started to grow. 
+Connected via an invisible string, the sky was always there wherever I went. With the sun to brighten up my day and the moon to guide me through the dark. Day by day, the seed started to grow. 
 
 But then a typhoon came. String broke. I fell. 
 
